# web-ccntrq

./: .gitignore  LICENSE  README.md  ccntrq-web.cabal  site.hs  stack.yaml
css/: footer.css  layout.css  page-content.css  print.css  reset.css  sidebar.css  style.css  syntax.css
favicon/: browserconfig.xml  site.webmanifest
httpd-conf/: httpd.conf
pages/: 404.md  about-me.md  contact.md  perl-weekly-challenge.md  privacy-policy.md
pages/perl-weekly-challenge/: challenge-1.md  challenge-100.md  challenge-140.md  challenge-141.md  challenge-142.md  challenge-143.md  challenge-144.md  challenge-145.md  challenge-147.md  challenge-148.md  challenge-149.md  challenge-150-task-1.md  challenge-150-task-2.md  challenge-151-task-1.md  challenge-151-task-2.md  challenge-152-task-1.md  challenge-152-task-2.md  challenge-153-task-1.md  challenge-153-task-2.md  challenge-158.md  challenge-160-task-1.md  challenge-160-task-2.md  challenge-161.md  challenge-162.md  challenge-163.md  challenge-164.md  challenge-165.md  challenge-188.md  challenge-189.md  challenge-190-de.md  challenge-190.md  challenge-191.md  challenge-192.md  challenge-2.md  challenge-3.md  challenge-75.md  challenge-76.md  challenge-77.md  challenge-78.md  challenge-79.md  (+16 more)
src/Hakyll/: MyMain.hs
src/Hakyll/Web/: ImageToWebP.hs
src/Tools/: FindWeeklyChallenges.hs
templates/: default.html  footer.html  page-content.html  perl-weekly-challenge-post.html  perl-weekly-challenge.html  robots.txt  sidebar.html  sitemap.xml
