name:               ccntrq-web
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  exposed-modules:
      Hakyll.MyMain
      Hakyll.Web.ImageToWebP
      Tools.FindWeeklyChallenges

  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , bytestring
                  , containers
                  , directory
                  , extra
                  , Glob
                  , optparse-applicative
                  , process
                  , split
                  , Unixutils
  hs-source-dirs:   src
  default-language: Haskell2010

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , ccntrq-web
                  , bytestring
                  , filepath
                  , split
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
